[gd_scene load_steps=2 format=3 uid="uid://cn2srwer6532q"]

[ext_resource type="Script" path="res://src/UI/MenuBar/file_confirmation_dialog.gd" id="1_7r4f8"]

[node name="FileConfirmationDialog" type="ConfirmationDialog"]
initial_position = 1
size = Vector2i(500, 193)
visible = true
unresizable = true
borderless = true
script = ExtResource("1_7r4f8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Raw"

[node name="RawLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RawButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "open"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cleaned"

[node name="CleanedLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CleanedButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "open"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Texts"

[node name="TextsLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextsButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "open"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Styles"

[node name="StylesOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.24
selected = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "IA"

[node name="IACheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="RawFileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(708, 159)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*")
use_native_dialog = true

[node name="CleanedFileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(708, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*")
use_native_dialog = true

[node name="TextsFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(708, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*")
use_native_dialog = true

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RawButton" to="." method="_on_raw_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CleanedButton" to="." method="_on_cleaned_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/TextsButton" to="." method="_on_texts_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer4/StylesOptionButton" to="." method="_on_styles_option_button_item_selected"]
[connection signal="dir_selected" from="RawFileDialog" to="." method="_on_raw_file_dialog_dir_selected"]
[connection signal="dir_selected" from="CleanedFileDialog" to="." method="_on_cleaned_file_dialog_dir_selected"]
[connection signal="file_selected" from="TextsFileDialog" to="." method="_on_texts_file_dialog_file_selected"]
